@@ -1,6 +1,7 @@
 Fri, 07 Jul 2006 14:21:59 +0200 <thp@perli.net>
 	* Added workarounds to libopmlreader to support 
 	  subscription lists from odeo.com (Import from web)
+	* Unquote URL-encoded text from odeo.com opml feeds
 
 Thu, 06 Jul 2006 20:55:37 +0200 <thp@perli.net>
 	* Multiple selection support for download progress list
